--- a/index.html
+++ b/index.html
@@ -12,42 +12,87 @@
 <body>
   <!-- START NAV -->
 
+
+<div id="home">
   <nav id="navbar" class="nav">
     <ul class="nav-list">
-      <li><a href="#about1">About</a></li>
+      <li><a href="#home">Home</a></li>
       <li>
-        <a href="#work">Work</a>
+      <li><a href="#about">About</a></li>
+      <li>
+        <a href="#projects">Projects</a>
       </li>
       <li>
         <a href="#contact">Contact</a>
       </li>
     </ul>
   </nav>
+</div>
 
   <!-- END NAV -->
 
   <!-- <nav id="navbar"></nav>  -->
-  <div id="welcome-section">FCC Responsive Web Design Projects</div>
-  <div id="content">
-    <div class="blank">About</div>
+  <div id="welcome-section">
+    <h1 class="header">FCC Responsive Web Design Projects</h1>
+  </div>
+  <div id="about" class="about">
+    <div class="section-heading">About</div>
     <div id="about1" class="about1">
-      <p>This a portfolio of four web design projects as required by the FCC Responsive Web Design Certification. There are a number of user story requirements for each project and each is highly specific in use of; class, id, flex, anchor tags, etc. often to the disservice of initial design and best practice. Regardless, each project is an attempt to apply all of the skills, principles, and concepts a student learns within the FCC Responsive Web Design coursework including; HTML, CSS, Visual Design and Accessibility.</p>
+      <p>This a portfolio of four web design projects as required by the FCC Responsive Web Design Certification. There are a number of user story requirements for each project and each is highly specific in use of; class, id, flex, anchor tags, etc. Each project is an attempt to apply all of the skills, principles, and concepts a student learns within the FCC Responsive Web Design coursework including; HTML, CSS, Responsive Visual Design and Accessibility.</p>
 
-<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam nulla facere ea in tenetur omnis, magni corporis quod earum? Similique totam reprehenderit nihil quam minima obcaecati perspiciatis eum possimus debitis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam esse, ab ex distinctio earum quidem id porro, nisi vel perspiciatis nesciunt libero numquam iusto recusandae ullam facilis. Ipsum, hic culpa. Lorem, ipsum dolor sit amet.</p>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias eveniet dolore illum recusandae omnis, incidunt animi? Consequuntur nam nobis, tempore dolores illum aperiam odit? Numquam quae magnam mollitia quasi voluptates quisquam explicabo ipsam consequatur laboriosam labore. Eligendi animi debitis placeat modi possimus? Ad corrupti ducimus unde, sed fuga laudantium consequatur. </p>
     </div>
-    <div class="about2">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet error incidunt rerum aliquam, ratione veniam quibusdam ipsam, tempora pariatur dolorem et temporibus numquam ab iste, repudiandae consequuntur maiores. Optio, sapiente.</p>
+  </div>
+
+  <div id="projects">
+    <div class="section-heading">Projects</div>
+    <br>
+      <div class="row">
+        <div class="card">
+          <div class="card-heading">
+            <div><a href="https://codepen.io/mikethye/pen/WNRavxQ">Unwound</a></div>
+          </div>
+          <div class="card-img" style="background-image:url('images/unwound.png')">
+          </div>
+        </div>
+      </div>
+
+
+      <div class="row">
+        <div class="card">
+          <div class="card-heading">
+            <div><a href="https://codepen.io/mikethye/pen/eYgPWqr">Breakfast Menu</a></div>
+          </div>
+          <div class="card-img" style="background-image:url('images/breakfast.png')"></div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="card">
+          <div class="card-heading">
+            <div><a href="https://codepen.io/mikethye/pen/VwPVoqW">Robo Dev</a></div>
+          </div>
+          <div class="card-img" style="background-image:url('images/robo.png')"></div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="card">
+          <div class="card-heading">
+            <div><a href="https://codepen.io/mikethye/pen/QWdopmO">CSS Grid</a></div>
+          </div>
+          <div class="card-img" style="background-image:url('images/grid.png')"></div>
+        </div>
+      </div>
+  </div>
       
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis molestiae placeat id voluptates dicta nemo iure cupiditate incidunt modi vel, voluptas hic repellendus! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam aspernatur explicabo quod ipsam maxime excepturi. Repudiandae autem illum, aspernatur non sapiente quae ex obcaecati odit fugit in. Ab temporibus doloribus cumque aliquid delectus at maiores vel. Repudiandae autem illum, aspernatur non sapiente quae ex obcaecati odit fugit in. Id animi mollitia vel? Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, enim fugit eveniet omnis incidunt in rem ad numquam.</p>
+    
+
+  <div id="contact">
+    <div class="section-heading">Contact</div>
+    <div class="card-heading">
+      <a id="profile-link" href="https://www.freecodecamp.org/fccb2b673f6-2fb8-49c5-9927-4f12b77a1477" target="_blank">My FCC Profile</a>
     </div>
-    <div id="work" class="unwound-img">5</div>
-    <div class="unwound-text">6</div>
-    <div class="breakfast-img">7</div>
-    <div class="breakfast-text">8</div>
-    <div class="robo-text">9</div>
-    <div class="robo-img">10</div>
-    <div class="grid-text">11</div>
-    <div class="grid-img">12</div>
   </div>
 
 </body>
